tests/paczka1/fuzzy1/31415331.err
Error in line 2: s68Zux51wnc A693 50,0
Error in line 1: FFyY A693 85,9
Error in line 6: Y8Ex8juqp A701 94,9
Error in line 4: 9yP7rKo A701 78,1
Error in line 16: FFyY A693 83,4
Error in line 14: 9yP7rKo A693 60,5
Error in line 20: 9yP7rKo S675 12,5
Error in line 26: r7A A160 43,7
Error in line 29: r7A A701 12,8
Error in line 32: r7A A693 97,7
Error in line 34: r7A S675 81,9
Error in line 37: S675 A701 13,5
